--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,12 @@
 </div>
 
 <div class="menu">
-	<div class="story" *ngFor="let item of items">
+	<div class="story"
+		(click)="nav2url('/')"
+		>Home</div>
+	<div class="story" *ngFor="let item of items"
+		(click)="nav2url('story/'+ item.id)"
+		>
 		{{item.text}}
 		-
 		data/{{item.page}}
@@ -15,5 +20,5 @@
 </div>
 
 <div class="contentBox">
-	"The html pages should loud here when clicked in Menu."
+	<router-outlet></router-outlet>
 </div>
